# JARVOS_recyclique

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  paheko-config.local.php  paheko-www.htaccess  pytest.ini  test.md
recyclique-1.4.4/api/: README.md  create_admin.sh  create_schema.py  create_test_db.py  fix_migration.sql  migrate_test_db.py  openapi.json  pyproject.toml  pytest.ini  run_tests.sh  test_admin_simple.py  test_cli_final.py  test_pending_endpoints.py  test_postgres.sh  test_simple.py  test_simple_import.py  test_tables.py  test_telegram_notifications.py  testing-guide.md
recyclique-1.4.4/api/migrations/versions/: 335d7c71186e_initial_schema_from_final_models.py  b42_p2_add_user_sessions_table.py  b47_p5_add_legacy_category_mapping_cache.py  b50_p4_add_virtual_deferred_permissions.py  b52_p1_add_payment_transactions.py  b52_p3_add_sale_date_to_sales.py  ea87fd9f3cdb_merge_b40_p5_and_payment_method.py
recyclique-1.4.4/api/scripts/: generate_offline_template.py  validate_migration_post.py
recyclique-1.4.4/api/src/: cli.py
recyclique-1.4.4/api/src/recyclic_api/: __init__.py  cli.py  initial_data.py  main.py
recyclique-1.4.4/api/tests/: conftest.py  factories.py  test_activity_ping.py  test_admin_cash_sessions_maintenance.py  test_admin_e2e.py  test_admin_force_password.py  test_admin_observability_endpoints.py  test_admin_pending_endpoints.py  test_admin_schemas.py  test_admin_settings.py  test_admin_user_status_endpoint.py  test_admin_users_mutations_routes.py  test_advanced_filters_integration.py  test_auth_cache_behavior.py  test_auth_login_endpoint.py  test_auth_login_username_password.py  test_auth_login_username_password_old.py  test_auth_logout.py  test_auth_metrics_integration.py  test_auth_password_reset.py  test_auth_signup_endpoint.py  test_b49_p1_integration_endpoints.py  test_b49_p1_migration_check.py  test_b49_p1_workflow_options.py  test_b49_p2_no_item_pricing.py  test_b49_p3_virtual_deferred_inheritance.py  test_b49_p4_cash_register_options.py  test_b52_p1_payments.py  test_b52_p2_edit_weight.py  test_b52_p3_sale_date.py  test_b52_p4_update_sale_item.py  test_b52_p6_session_weights.py  test_bot_auth_simple.py  test_cash_register_arch03.py  test_cash_registers_endpoint.py  test_cash_session_close.py  test_cash_session_close_arch02.py  test_cash_session_close_arch03_domain_errors.py  test_cash_session_close_arch04.py  test_cash_session_close_policy.py  (+87 more)
recyclique-1.4.4/api/tests/api/: test_admin_endpoints.py  test_admin_user_management.py  test_categories_endpoint.py  test_pin_endpoints.py  test_signup_endpoint.py  test_stats_endpoints.py
recyclique-1.4.4/api/tests/cli/: test_cli.py
recyclique-1.4.4/api/tests/load/: test_login_performance.py
recyclique/api/: .dockerignore  Dockerfile  Dockerfile.migrations  Dockerfile.tests  README.md  _bootstrap_verify.db  _collect.txt  _lot145_test.db  _pytest_agent_console.txt  _pytest_agent_full.xml  _pytest_capture.txt  _pytest_fresh_console.txt  _pytest_junit.xml  _pytest_junit_fresh.xml  _pytest_timeout_run.txt  _t.db  _test_fk_check.db  _tmp_fk_test.db  _tmp_fk_test2.db  alembic.ini  correct_migration.py  create_schema.py  create_tables_test.py  create_test_tables.py  create_test_tables_direct.py  debug_cli.py  env.test  env.test.postgres  fix_migration_state.py  generate_openapi.py  init_test_db.py  junit_agent.xml  junit_full.xml  junit_full_run.xml  junit_run.xml  openapi.json  pyproject.toml  pytest-quiet.txt  pytest.ini  pytest_agent_final.db  (+32 more)
recyclique/api/docs/: story-2-5-epic8-audit-foundations.md
recyclique/api/migrations/: env.py  test_connection.py
recyclique/api/migrations/versions/: 07d1d205a8c6_remove_manager_role_from_userrole_enum.py  1f030e91bee7_add_unique_constraint_to_user_email.py  39f4b21e73f_b48_p5_add_official_name_to_categories.py  66dc64c75ec4_b40_p5_add_note_to_sales.py  9ca74a277c0d_seed_initial_permissions.py  a1b2c3d4e5f6_add_preset_buttons_table.py  a1b2c3d4e5f7_b48_p4_add_display_order_entry_to_categories.py  a7b3c9d2014f_add_email_events_and_email_statuses.py  add_category_visibility_fields.py  add_step_metrics_to_cash_session.py  b48_p3_add_is_exit_to_ligne_depot.py  b49_p1_add_workflow_options_to_cash_registers.py  b52_p1_add_payment_transactions.py  b52_p3_add_sale_date_to_sales.py  b53_st2_3_group_key_site_scope.py  b8_2_story_8_2_paheko_outbox_retry.py  b8_3_story_8_3_paheko_cash_session_close_mapping.py  b8_4_story_8_4_paheko_outbox_sync_audit.py  c6e3_story_6_3_sale_lifecycle_status.py  d4e5f6a7b8c1_add_fk_users_site_id.py  d72092157d1b_b48_p1_add_deleted_at_to_categories.py  d7f1_story_6_4_sale_reversals_and_refund_perm.py  e8f9a0b1c2d3_m11e_rename_legacy_messenger_columns.py  (+21 more)
recyclique/api/scripts/: check_transaction_logs.py  generate_offline_template.py
recyclique/api/src/: __init__.py
recyclique/api/tests/: README.md  __init__.py  api_v1_paths.py  bulk_sensitive_headers.py  caisse_sale_eligibility.py  conftest.py  memory_redis_for_tests.py  paheko_8x_test_utils.py  reception_story72_eligibility.py  test_active_operators_endpoint.py  test_activity_ping.py  test_admin_activity_threshold_endpoints.py  test_admin_cash_sessions_maintenance.py  test_admin_e2e.py  test_admin_force_password.py  test_admin_health_endpoints.py  test_admin_observability_endpoints.py  test_admin_pending_endpoints.py  test_admin_schemas.py  test_admin_settings.py  test_admin_user_groups_assignment_service.py  test_admin_user_status_endpoint.py  test_admin_users_credentials_routes.py  test_admin_users_groups_routes.py  test_admin_users_history_routes.py  test_admin_users_read_routes.py  test_audit_story_25.py  test_auth_cache_behavior.py  test_auth_inactive_user_middleware.py  test_auth_logging.py  test_auth_login_endpoint.py  test_auth_login_username_password.py  test_auth_login_username_password_old.py  test_auth_logout.py  test_auth_metrics_integration.py  test_auth_password_reset.py  test_auth_performance.py  test_b49_p1_backward_compatibility.py  test_b49_p1_integration_endpoints.py  test_b49_p1_migration_check.py  (+184 more)
(+3695 files in other folders)
